--- a/HW5_1/HW51/src/Documents/РеализацияТоваровИУслуг/Forms/ФормаДокумента/Form.form
+++ b/HW5_1/HW51/src/Documents/РеализацияТоваровИУслуг/Forms/ФормаДокумента/Form.form
@@ -262,6 +262,10 @@
           <segments>Объект.Товары.Количество</segments>
         </paths>
       </dataPath>
+      <handlers>
+        <event>OnChange</event>
+        <name>ТоварыКоличествоПриИзменении</name>
+      </handlers>
       <extendedTooltip>
         <name>ТоварыКоличествоРасширеннаяПодсказка</name>
         <id>28</id>
@@ -314,6 +318,10 @@
           <segments>Объект.Товары.Цена</segments>
         </paths>
       </dataPath>
+      <handlers>
+        <event>OnChange</event>
+        <name>ТоварыЦенаПриИзменении</name>
+      </handlers>
       <extendedTooltip>
         <name>ТоварыЦенаРасширеннаяПодсказка</name>
         <id>31</id>
@@ -416,6 +424,10 @@
       <horizontalAlign>Left</horizontalAlign>
       <autoFill>true</autoFill>
     </autoCommandBar>
+    <handlers>
+      <event>OnEditEnd</event>
+      <name>ТоварыПриОкончанииРедактирования</name>
+    </handlers>
     <searchStringAddition>
       <visible>true</visible>
       <enabled>true</enabled>
